--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ header {
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .links{
@@ -125,7 +126,7 @@ li a {
 
 .imgBannerIndex {
   width: 280px;
-  margin-top: 10px;
+  margin: 30px 0;
 }
 
 .cardsSection {
