--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@
   src: url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 }
 
+a{
+  color: white;
+  text-decoration: none;
+}
+
 html {
   font-family: "Open Sans", sans-serif;
   background-color: #F9F9FB;
@@ -36,14 +41,6 @@ html {
 header {
   background-color: #8A2BE2;
   padding: 5px 5% 0 5%;
-  
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 100;
 }
 
 .links{
@@ -55,7 +52,7 @@ header {
   padding: 0 20px;
 }
 
-li a {
+.links li a {
   font-size: 16px;
   color: white;
   text-decoration: none;
@@ -378,6 +375,9 @@ footer {
 }
 .footerLinks li{
   margin: 5px 0;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
 }
 
 .newsletter {
