--- a/css/styles.css
+++ b/css/styles.css
@@ -77,18 +77,16 @@ header {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  /* padding: 30px 0; */
 }
 
 .bannerArticle {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   color: white;
   margin-bottom: 20px;
   margin-top: 80px;
-  max-width: 800px;
 }
 
 .bannerTitle {
@@ -130,46 +128,28 @@ header {
   margin: 30px 0;
 }
 
-.cardsSection {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+.card {
   align-items: center;
-  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 300px;
+  margin: 40px auto 0;
+  padding: 15px 5px 5px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  border: 0;
 }
 
-.cardsArticleCard {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  min-width: 300px;
-  width: 300px;
-  overflow: hidden;
-  border-radius: 15px;
-  padding: 20px;
+.card-body{
   text-align: center;
-  margin: 50px 30px;
-  box-shadow: -1px 2px 4px 1px #CECECE;
-  background-color: white;
+}
+
+.card-text{
+  font-size: 20px;
 }
 
 .imgClient {
-  vertical-align: middle;
   width: 125px;
   height: 125px;
   border-radius: 50%;
-  margin: 0 0 15px;
-}
-
-.cardText {
-  font-size: 25px;
-  margin: 15px;
-}
-
-.cardFooter {
-  font-size: 16px;
-  font-weight: lighter;
 }
 
 .textSection {
@@ -196,72 +176,9 @@ header {
 
 /* Contacto */
 
-.contactSection {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
 .contactForm {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 30px;
   border: 1px solid black;
   border-radius: 15px;
-  width: 400px;
-  height: 380px;
-  margin: 20px 10px;
-}
-
-.formLabel {
-  font-size: 24px;
-  margin: 5px 0;
-}
-
-.formInput{
-  height: 32px;
-  width: 100%;
-  margin-bottom: 10px;
-  border: none;
-  border-bottom: 1px solid black;
-  text-indent: 5px;
-  font-size: 16px;
-}
-
-.formInput:focus {
-  outline: none;
-  border: none;
-  border-bottom: 1px solid #8A2BE2;
-}
-
-.formTextarea {
-  width: 100%;
-  height: 80px;
-  resize: none;
-  font-size: 16px;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  text-indent: 5px;
-  margin: 10px 0 30px;
-}
-
-.formTextarea:focus {
-  outline: none;
-  border: 1px solid #8A2BE2;
-}
-
-.formButton {
-  align-self: center;
-  font-size: 20px;
-  color: white;
-  padding: 10px 20px;
-  background-color: #8A2BE2;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
 }
 
 .contactInfo {
@@ -269,13 +186,9 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 30px;
-  margin: 20px 0;
-  width: 380px;
-  height: 380px;
-
   border: 1px solid black;
   border-radius: 15px;
+  height: 465px;
 }
 
 .contactInfoTitle {
@@ -294,13 +207,6 @@ header {
   font-size: 16px;
 }
 
-.mapSection {
-  margin: 60px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .iframe {
   width: 400px;
   height: 300px;
@@ -311,7 +217,7 @@ header {
 /* Producto */
 
 .productImage {
-  width: 350px;
+  max-width: 350px;
   margin-top: 20px;
 }
 
@@ -326,9 +232,6 @@ header {
 
 /* Blog */
 .blogSection{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   margin:20px 10%;
 }
 
@@ -369,6 +272,22 @@ footer {
   flex-wrap: wrap;
 }
 
+.flexRowCenter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.flexColumnCenter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .footerLinks {
   display: flex;
   flex-direction: column;
@@ -405,10 +324,12 @@ footer {
 }
 
 .newsletter button {
-  height: 30px;
+  height: 31px;
   background-color: white;
-  border: 1px;
-  padding: 0 15px;
+  padding: 0 5px;
+  border: 1px solid black;
+  margin-left: 3px;
+  border-radius: 3px;
 }
 
 .downloadApp {
@@ -431,7 +352,11 @@ footer {
   flex-wrap: wrap-reverse;
 }
 
-@media screen and (min-width: 0px) and (max-width: 380px){
+.alert{
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 0px) and (max-width: 576px){
   header {
     padding: 0;
     flex-direction: column ;
@@ -456,19 +381,11 @@ footer {
   }
 
   .imgSobreNosotros {
-    width: 380px;
+    width: 100%;
   }
 
   .blogTitle {
     font-size: 50px;
-  }
-
-  .contactForm {
-    width: 280px;
-  }
-
-  .contactInfo {
-    width: 280px;
   }
 
   .iframe {
