--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ html {
   background-color: #F9F9FB;
 }
 
+p {
+  margin: 0;
+}
+
 .whiteBackground {
   background-color: white;
 }
@@ -40,7 +44,8 @@ html {
 
 header {
   background-color: #8A2BE2;
-  padding: 5px 5% 0 5%;
+  padding: 0 5%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 .links{
@@ -53,14 +58,18 @@ header {
 }
 
 .links li a {
-  font-size: 16px;
+  font-size: 1rem;
   color: white;
   text-decoration: none;
 }
 
 .logo {
   width: 250px;
-  margin: 5px;
+}
+
+.navbar-brand {
+  margin: 0;
+  padding: 0;
 }
 
 .navbar-dark .navbar-nav .nav-link{
@@ -77,7 +86,6 @@ header {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  /* padding: 30px 0; */
 }
 
 .bannerArticle {
@@ -92,15 +100,15 @@ header {
 }
 
 .bannerTitle {
-  font-size: 48px;
+  font-size: 2.8rem;
   font-weight: bold;
-  margin: 0 0 10px;
+  margin: 0 5px 10px;
   text-align: center;
 }
 
 .bannerText {
-  font-size: 32px;
-  margin: 10px 0 30px;
+  font-size: 2rem;
+  margin: 10px 5px 30px;
   text-align: center;
 }
 
@@ -109,17 +117,29 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 30px;
   flex-wrap: wrap;
 }
 
-.bannerButton {
-  background-color: white;
-  color: black;
+.bannerButtonPrimary {
+  background-color: black;
+  color: white;
   border: none;
   border-radius: 50px;
   cursor: pointer;
-  font-size: 20px;
-  margin: 10px 30px;
+  font-size: 1.2rem;
+  height: 55px;
+  width: 200px;
+  font-weight: bold;
+}
+
+.bannerButtonSecondary {
+  background-color: #8A2BE2;
+  color: white;
+  border: solid 3px white;
+  border-radius: 50px;
+  cursor: pointer;
+  font-size: 1.2rem;
   height: 55px;
   width: 200px;
   font-weight: bold;
@@ -141,10 +161,11 @@ header {
 .cardsArticleCard {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   min-width: 300px;
-  width: 300px;
+  width: 350px;
+  height: 450px;
   overflow: hidden;
   border-radius: 15px;
   padding: 20px;
@@ -159,16 +180,14 @@ header {
   width: 125px;
   height: 125px;
   border-radius: 50%;
-  margin: 0 0 15px;
 }
 
 .cardText {
-  font-size: 25px;
-  margin: 15px;
+  font-size: 1.6rem;
 }
 
 .cardFooter {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: lighter;
 }
 
@@ -177,11 +196,11 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin:30px 0 90px;
+  margin:50px 0;
 }
 
 .textSectionTitle {
-  font-size: 30px;
+  font-size: 2rem;
   max-width: 50%;
   text-align: center;
   font-weight: lighter;
@@ -189,8 +208,8 @@ header {
 }
 
 .textSectionText {
-  margin: 20px 10%;
-  font-size: 18px;
+  margin: 10px 10%;
+  font-size: 1.2rem;
   font-weight: lighter;
 }
 
@@ -209,15 +228,14 @@ header {
   flex-direction: column;
   align-items: flex-start;
   padding: 30px;
-  border: 1px solid black;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 15px;
   width: 400px;
-  height: 380px;
-  margin: 20px 10px;
+  margin: 20px 0;
 }
 
 .formLabel {
-  font-size: 24px;
+  font-size: 1.2rem;
   margin: 5px 0;
 }
 
@@ -228,7 +246,7 @@ header {
   border: none;
   border-bottom: 1px solid black;
   text-indent: 5px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .formInput:focus {
@@ -239,13 +257,13 @@ header {
 
 .formTextarea {
   width: 100%;
-  height: 80px;
   resize: none;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 1rem;
   font-family: "Open Sans", sans-serif;
-  text-indent: 5px;
+  padding: 2px;
   margin: 10px 0 30px;
+  transition: all 0.3s ease 0s;
+  border: 1px solid black;
 }
 
 .formTextarea:focus {
@@ -255,13 +273,22 @@ header {
 
 .formButton {
   align-self: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   color: white;
-  padding: 10px 20px;
+  padding: 10px 25px;
   background-color: #8A2BE2;
   border: none;
   border-radius: 30px;
   cursor: pointer;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+}
+
+.formButton:hover {
+  color: white;
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.651);
+  transform: translateY(-2px);
 }
 
 .contactInfo {
@@ -271,27 +298,31 @@ header {
   align-items: flex-start;
   padding: 30px;
   margin: 20px 0;
-  width: 380px;
-  height: 380px;
-
-  border: 1px solid black;
+  width: 400px;
+  height: 428px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 15px;
 }
 
 .contactInfoTitle {
   align-self: center;
-  font-size: 24px;
+  font-size: 1.6rem;
   font-weight: 700;
 }
 
 .contactInfoRow {
   display: flex;
   align-items: center;
+  width: 100%;
+}
+
+.socials {
+  justify-content: center;
 }
 
 .contactInfoRow p {
   margin-left: 10px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .mapSection {
@@ -306,7 +337,6 @@ header {
   height: 300px;
   border: 0;
 }
-
 
 /* Producto */
 
@@ -324,6 +354,17 @@ header {
   margin: 15px;
 }
 
+.alignSelfStart{
+  align-self: flex-start;
+}
+
+.flexRowCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 /* Blog */
 .blogSection{
   display: flex;
@@ -333,13 +374,13 @@ header {
 }
 
 .blogTitle {
-  font-size: 64px;
+  font-size: 4rem;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .blogDescription {
-  font-size: 24px;
+  font-size: 1.8rem;
   font-weight: lighter;
   margin: 10px 0;
 }
@@ -354,7 +395,7 @@ header {
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 1.6rem;
   margin: 10px 0;
 }
 /* Pie de pagina */
@@ -376,16 +417,17 @@ footer {
   align-items: center;
   list-style: none;
   margin: 15px 0;
+  padding: 0;
 }
 .footerLinks li{
   margin: 5px 0;
-  font-size: 16px;
+  font-size: 1rem;
   color: white;
   text-decoration: none;
 }
 
 .newsletter {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .newsletter p{
@@ -416,8 +458,8 @@ footer {
 }
 
 .downloads article p {
-  font-size: 20px;
-  margin: 15px 0;
+  font-size: 1.2rem;
+  margin: 0 0 15px 0;
   font-weight: 400;
 }
 
@@ -458,11 +500,6 @@ footer {
   .imgSobreNosotros {
     width: 380px;
   }
-
-  .blogTitle {
-    font-size: 50px;
-  }
-
   .contactForm {
     width: 280px;
   }
