--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,3 +8,50 @@ footer {
     padding: 10px;
     flex-wrap: wrap;
 }
+
+.footerLinks {
+    li {
+        margin: 5px 0;
+        font-size: 1rem;
+        color: white;
+        text-decoration: none;
+    }
+}
+
+.newsletter {
+    font-size: 1.2rem;
+    p{
+        margin-bottom: 10px;
+    }
+    input {
+        height: 30px;
+        width: 200px;
+        text-indent: 10px;
+        border: none;
+        background-color: white;
+        &:focus {
+            outline: none;
+        }
+    }
+    button {
+        height: 30px;
+        background-color: white;
+        border: 1px;
+        padding: 0 15px;
+    }
+}
+
+.downloadApp {
+    height: 40px;
+}
+
+.downloads {
+    article {
+        p {
+            font-size: 1.2rem;
+            margin: 0 0 15px 0;
+            font-weight: 400;
+        }
+    }
+}
+
