--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,14 +1,8 @@
 
 header {
     background-color: #8A2BE2;
-    padding: 5px 5% 0 5%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 100;
+    padding: 0 5%;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 .links {
@@ -26,5 +20,17 @@ header {
 
 .logo {
     width: 250px;
-    margin: 5px;
+}
+
+.navbar-brand {
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-dark{
+    .navbar-nav {
+        .nav-link {
+            color: white;
+        }
+    }
 }
