--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -10,6 +10,13 @@ footer {
 }
 
 .footerLinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    margin: 15px 0;
+    padding: 0;
     li {
         margin: 5px 0;
         font-size: 1rem;
