--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,6 +1,5 @@
 
 .container404 {
-    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +7,7 @@
     margin: 0px 30px;
 
     h2 {
-        font-size: 3rem;
+        font-size: 2.7rem;
         margin: 15px 5px;
     }
 
@@ -24,4 +23,8 @@
     font-size: 100px;
     font-weight:bolder;
     mix-blend-mode: screen;
+}
+
+.marginButton404 {
+    margin: 0 0 50px;
 }
