--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -19,4 +19,12 @@
     .iframe {
         width: 360px;
     }
+
+    .blogTitle {
+        font-size: 3.6rem;
+    }
+
+    header {
+        padding: 0;
+    }
 }
