--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin: 0px 30px;
+    min-height: 80vh;
 
     h2 {
         font-size: 2.7rem;
