--- a/scss/components/_contactInfo.scss
+++ b/scss/components/_contactInfo.scss
@@ -5,10 +5,11 @@
     align-items: flex-start;
     padding: 30px;
     margin: 20px 0;
-    width: 400px;
-    height: 428px;
+    width: 500px;
+    height: 500px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 15px;
+    margin: 10px;
 }
 
 .contactInfoTitle {
