--- a/css/scssStyles.css
+++ b/css/scssStyles.css
@@ -8,7 +8,12 @@
 
 a {
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+  transition: all 0.3s ease 0s; }
+
+a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: #cfcfcf; }
 
 html {
   font-family: "Open Sans", sans-serif;
